tests/valid_programs/var.duck
fn main() {
    let x: String = "hallo";
}
