tests/errors/field_access/not_object_like.duck
fn main() {
    let x: String = "hallo";
    let y = x.field;
}
